# lean-client-python

./: .coveragerc  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
examples/: find_and_replace.py  qt_interface.py  template.lean  test.lean  trio_example.py  trio_example_all_commands.py
examples/find_and_replace/: stack.lean
src/lean_client/: commands.py  qt_server.py  trio_server.py
test/test_commands/: test_request_serialization.py  test_response_parsing.py
test/test_trio_server/: mock_lean.py  test_full_sync.py  test_receiver.py  test_send.py  test_waiting_for_response.py
