[metadata]
name = lean-client
version = 0.1.0
url = https://github.com/leanprover-community/lean-client-python
project_urls =
    Source = https://github.com/leanprover-community/lean-client-python
    Issues = https://github.com/leanprover-community/lean-client-python/issues/
description = Python talking to the Lean prover
long_description = file: README.md
long_description_content_type = text/markdown
author = Patrick Massot
author_email = patrickmassot@free.fr
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
lean_client = py.typed

[options.extras_require]
qt =
    PyQt5
    PyQt5-stubs
trio = trio>=0.13.0
all =
    trio>=0.13.0
    PyQt5
    PyQt5-stubs
